--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://av-gowtham.github.io/travel-list",
+  "homepage": "http://av-gowtham.github.io/travel-bagger",
   "name": "05-travel-list",
   "version": "0.1.0",
   "private": true,
